# Scoreboard-backend/schemas/GlobalConfigModel.ts
@@ -1,0 +1,11 @@
+import mongoose from "mongoose";
+
+const globalConfigSchema = new mongoose.Schema({
+    tickerText: { type: String, default: "" },
+    lastBroadcastMessage: { type: String, default: "" },
+    lastBroadcastDuration: { type: Number, default: 0 },
+});
+
+const GlobalConfigModel = mongoose.model("GlobalConfig", globalConfigSchema);
+
+export default GlobalConfigModel;
